Email (full HTML + PDF), Telegram (summaries + conflicts), X/Twitter (institutional Top 3 format)

--- a/.env.template
+++ b/.env.template
@@ -16,37 +16,56 @@
 # UNUSUAL_WHALES_API_KEY=your_uw_key
 
 # ========================================================================
-# EMAIL SETTINGS
+# EMAIL SETTINGS (Gmail with App Password)
 # ============================================================================
-# For Gmail: Use an App Password (not your regular password)
-# Go to Google Account > Security > 2-Step Verification > App passwords
+# STEP 1: Enable 2-Step Verification on your Google Account
+#         → myaccount.google.com > Security > 2-Step Verification
+# STEP 2: Generate an App Password
+#         → myaccount.google.com > Security > 2-Step Verification > App passwords
+#         → Select "Mail" and your device → Generate
+# STEP 3: Use the 16-character password below (NOT your Gmail password)
+#
+# What you'll receive: Full HTML-rendered report + PDF attachment of the .md file
 # ============================================================================
 META_SMTP_SERVER=smtp.gmail.com
 META_SMTP_PORT=587
 META_SMTP_USER=your_email@gmail.com
-META_SMTP_PASSWORD=your_gmail_app_password
-META_ALERT_EMAIL=your_email@gmail.com
+META_SMTP_PASSWORD=your_16_char_app_password
+META_ALERT_EMAIL=recipient@gmail.com
 
 # ============================================================================
 # TELEGRAM SETTINGS
+# ====================================================================
+# STEP 1: Open Telegram, search for @BotFather
+# STEP 2: Send /newbot → choose a name (e.g. "Meta Engine Alerts")
+#         → choose a username (e.g. "meta_engine_alerts_bot")
+# STEP 3: Copy the bot token (looks like: 123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11)
+# STEP 4: Open your new bot in Telegram, tap "Start" or send /start
+# STEP 5: Visit: https://api.telegram.org/bot<YOUR_TOKEN>/getUpdates
+#         → Find "chat":{"id": XXXXXXXXX} — that number is your chat_id
+#
+# What you'll receive: 3-Sentence Institutional Summaries + Conflict Matrix ONLY
 # ============================================================================
-# 1. Message @BotFather on Telegram with /newbot
-# 2. Choose a name and username for your bot
-# 3. Copy the bot token below
-# 4. Start a chat with your bot, send any message
-# 5. Visit https://api.telegram.org/bot<YOUR_TOKEN>/getUpdates
-# 6. Find "chat":{"id": XXXXXXXXX} — that's your chat_id
-# ==========================================================================
 META_TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 META_TELEGRAM_CHAT_ID=your_telegram_chat_id
 
 # ============================================================================
 # X/TWITTER SETTINGS
 # ============================================================================
-# 1. Go to developer.twitter.com and create an account
-# 2. Create a project and app
-# 3. Set app permissions to "Read and Write"
-# 4. Generate all keys and tokens below
+# STEP 1: Go to developer.twitter.com → Sign up for Developer Portal
+# STEP 2: Create a Project →pp inside the project
+# STEP 3: Under "User authentication settings":
+#         → Set App permissions to "Read and Write"
+#         → Set Type of App to "Web App, Automated App or Bot"
+#         → Set Callback URL to: https://localhost (placeholder)
+# STEP 4: Go to "Keys and Tokens" tab:
+#         → Regenerate "API Key and Secret" → save both
+#         → Generate "Access Token and Secret" → save both
+#         → Generate "Bearer Token" → save it
+# STEP 5: Paste all 5 values below
+#
+# What gets posted: Top 3 Puts + Top 3 Calls in institutional format
+# Format: "TICKER (Signal) | Entry: $X−$Y | Target: +Z% by Date | R:R: Nx | Score: X.XX"
 # ============================================================================
 X_API_KEY=your_twitter_api_key
 X_API_SECRET=your_twitter_api_secret
@@ -54,7 +73,7 @@ X_ACCESS_TOKEN=your_twitter_access_token
 X_ACCESS_TOKEN_SECRET=your_twitter_access_token_secret
 X_BEARER_TOKEN=your_twitter_bearer_token
 
-# ============================================================================
-# SCHEDULE SETTINGS
+# ======================================================================TTINGS
 # ============================================================================
 META_RUN_TIME=09:35
+META_RUN_TIME_PM=15:15
