All 5 fixes: eod_interval_picks integration, pydantic fix, score threshold gate, overnight gap detection, data freshness tags

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,8 @@ fpdf2>=2.7.0
 tweepy>=4.14.0
 
 # PutsEngine dependencies (if not installed globally)
-# pydantic>=2.5.0
-# pydantic-settings>=2.1.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
 # loguru>=0.7.2
 # aiohttp>=3.9.0
 # alpaca-py>=0.21.0
